2013-07-22  Paul Eggert  <eggert@cs.ucla.edu>

	* sysdep.c (frame) [__FreeBSD__]: #define to freebsd_frame
	when including <sys/user.h>, to prevent Sparc/ARM machine/frame.h
	from messing up Emacs's 'struct frame' (Bug#14923).

2013-07-21  Paul Eggert  <eggert@cs.ucla.edu>

	* alloc.c (make_save_ptr_ptr): Define this function.
	It was inadvertently omitted.  It's needed only if
	HAVE_MENUS && ! (USE_X_TOOLKIT || USE_GTK).

2013-07-21  Jan Djärv  <jan.h.d@swipnet.se>

	* nsterm.m (sendEvent:): Skip mouse moved if no dialog and no Emacs
	frame have focus (Bug#14895).

2013-07-21  Paul Eggert  <eggert@cs.ucla.edu>

	Avoid vfork-related deadlock more cleanly.
	* callproc.c (child_setup): When the child's exec fails, output
	the program name, as that's more useful.  Use O_NONBLOCK to avoid
	deadlock.
	* process.c (create_process_1): Remove; no longer needed.
	(create_process): Remove timer hack; no longer needed, now that
	the child avoids deadlock.

2013-07-20  Glenn Morris  <rgm@gnu.org>

	* image.c (Fimage_flush): Fix doc typo.

2013-07-20  Paul Eggert  <eggert@cs.ucla.edu>

	Fix array bounds violation when pty allocation fails.
	* process.c (PTY_NAME_SIZE): New constant.
	(pty_name): Remove static variable; it's now auto.
	(allocate_pty): Define even if !HAVE_PTYS; that's simpler.
	Take pty_name as an arg rather than using a static variable.
	All callers changed.
	(create_process): Recover pty_flag from process, not from volatile local.
	(create_pty): Stay inside array even when pty allocation fails.
	(Fmake_serial_process): Omit unnecessary initializaiton of pty_flag.

	* lread.c (Fload): Avoid initialization only when lint checking.
	Mention that it's needed only for older GCCs.

2013-07-20  Kenichi Handa  <handa@gnu.org>

	* coding.c (CODING_ISO_FLAG_LEVEL_4): New macro.
	(decode_coding_iso_2022): Check the single-shift area.  (Bug#8522)

2013-07-20  Andreas Schwab  <schwab@linux-m68k.org>

	* lread.c (Fload): Avoid uninitialized warning.
